--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,4 +9,9 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.security.user.name=hoidanit
 spring.security.user.password=123456
 
+#config View Engine
+# spring.mvc.view.prefix=/WEB-INF/view/
+# spring.mvc.view.suffix=.jsp
+
+
 
