--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,8 @@ spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/laptopshop
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.jpa.show-sql: true
+# Dùng để hiển thị câu lệnh SQL ra console
+spring.jpa.show-sql: true
 
 #config spring security
 spring.security.user.name=hoidanit
